--- a/Neiw.html
+++ b/Neiw.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>沙崙支線 | 鐵支路</title>
+    <title>內灣支線 | 鐵支路</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
 
     <link rel="stylesheet" href="./css/main_style.css">
-    <link rel="stylesheet" href="./css/Shal_style.css">
+    <link rel="stylesheet" href="./css/Neiw_style.css">
 </head>
 
 <body>
@@ -105,89 +105,150 @@
             <div class="container-fluid img-main-bgi">
                 <div class="container section2">
                     <div class="row">
-                        <div class="col"><img src="./img/Shal/main-Shal-title.png" alt="沙崙支旅"></div>
+                        <div class="col"><img src="./img/Neiw/main-Neiw-title.png" alt="內灣支旅"></div>
                     </div>
                     <div class="row text-justify text-main-cotent">
                         <div class="col">
                             <p class="my-0">
-                                <span>|</span>臺鐵為了方便旅客轉乘高鐵，於民國100年1月2日正式啟用，臺鐵沙崙線列車取代原本搭高鐵接駁巴士，交通時間由原本50分鐘縮短至22分鐘。沙崙線全程皆為高架，還開了首例橫跨國道一號，為臺鐵捷運化轉型實例。特別的是路線還經過長榮大學內，還能搭到別具臺南特色的彩繪圖案列車，讓你的接駁時刻更有樂趣！
+                                <span>|</span>內灣線是一條由國人建造的支線，前身是輕便車道，從新竹車站開始行駛往東，由靠海的平原逐漸進入山區，早期用來運送煤礦及木材。內灣線的設立，原本就是為了山林資源，例如石灰石、煤礦、矽沙等礦藏，和極為珍貴的香杉、赤柯、檜木，以及早期用做煉腦的樟樹等，因此隨著光復後的產業發展需求，便開始了內灣支線超過半個世紀的火車快飛歲月。
                             </p>
                         </div>
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-6">
-                            <div class="text-center img-main-km"><img src="./img/Shal/main-Shal-km.png"
-                                    alt="支線總長為5.3公里"></div>
+                            <div class="text-center img-main-km"><img src="./img/Neiw/main-Neiw-km.png"
+                                    alt="支線總長為27.9公里"></div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="img-main-line"><img src="./img/Shal/main-Shal-line.png" alt="起站中洲站 迄站沙崙站"></div>
-                            <div class="img-main-train"><img src="./img/Shal/main-Shal-train.png" alt="台鐵列車"></div>
+                            <div class="img-main-line"><img src="./img/Neiw/main-Neiw-line.png" alt="起站中洲站 迄站沙崙站"></div>
+                            <div class="img-main-train"><img src="./img/Neiw/main-Neiw-train.png" alt="台鐵列車"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- 版型A -->
+
         <section>
-            <div class="container section3">
-                <div class="row">
-                    <div class="col-6 text-left">
-                        <img src="./img/Shal/Shal-chimeTitle01.png" alt="壯觀的奇美博物館">
-                    </div>
-                    <div class="col-6 text-right">
-                        <img src="./img/Shal/Shal-chimeTitle02.png" alt="支線沙崙站 轉乘 西部幹線保安站">
+            <div class="section3">
+                <div class="img-Neiw-hex01">
+                    <div class="custom-row-mx-15 ">
+                        <div class="container ">
+                            <div class="row">
+                                <div class="col-4 Neiw-hex-title ">
+                                    <div class="mini1">
+                                        <img class="img1" src="./img/Neiw/Neiw-hexTitle.png" alt="">
+                                    </div>
+                                    <div class="mini2 ">
+                                        <img class="img2 " src="./img/Neiw/Neiw-hexSta.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <img class="rounded-lg" src="./img/Shal/Shal-chime01.jpg" alt="夜晚的奇美博物館">
-                    </div>
-                </div>
-                <div class="row text-justify text-Shal-chime01">
-                    <div class="col">
-                        <p class="my-0">
-                            <span>|</span>當看到這樣的景象，會以為這是歐洲某處宮殿的景致吧，走過陽光下映著彩虹的阿波羅噴泉，穿過護城河上的橋墩，勇猛優雅的白色獅頭一字排開，橋面上莊嚴的奧林帕斯眾神也整齊陳列，走過橋面，博物館正面入口採高聳的圓頂造型及各面不同的希臘列柱設計，這樣的氣勢更能襯托出典藏寶物宮殿的華麗。
-                        </p>
+                <div class="container">
+                    <div class="row custom-row-mx-15 text-Neiw-hex01 text-justify">
+                        <div class="col">
+                            <p><span>|</span>曾經合興站的站房漸被棄置，台鐵一度打算廢站，後來一對夫妻出面認養舊車站，於是促成了合興車站的重生，該站也因為這對夫妻的故事而聲名大噪，繼而被媒體冠上「愛情火車站」這個浪漫的別名。
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- 版型B -->
         <section>
-            <div class="container section4">
-                <div class="row">
-                    <div class="col">
-                        <img class="rounded-lg" src="./img/Shal/Shal-chime02.jpg"
-                            alt="榮耀天使 路易‧巴里亞斯 Louis-Ernest Barrias 奇美館 許文龍">
-                        <p class="col-4 my-0 text-justify">安置於博物館建築物最高點的「榮耀天使」雕塑，是臨摹法國雕塑家路易‧巴里亞斯(Louis-Ernest
-                            Barrias)的作品，這座手持桂冠和號角的榮耀天使，將永遠佇立於奇美館建築的最頂端，象徵守護這塊土地，榮耀世間的美好人事物。在2015年開幕的台南都會公園奇美博物館，主建築正面全長150公尺寬，高42公尺，耗資13億，是奇美集團的許文龍先生建造完成後捐贈給台南市的大禮物，開幕後也成為全台灣遊客甚至是國外遊客的必到之處。
-                        </p>
-                    </div>
-                </div>
+            <div class="section4">
+                <img class="img1" src="./img/Neiw/Neiw-hex02-3.jpg" alt="">
+                <img class="img2" src="./img/Neiw/Neiw-hex02.jpg" alt="">
+                <img class="img3" src="./img/Neiw/Neiw-hex02-2.jpg" alt="">
             </div>
         </section>
-        <!-- 版型C -->
         <section>
-            <div class="container section5">
-                <div class="row justify-content-between">
+            <div class="section5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-5">
+                            <div class="mini1">
+                                <img class="img1" src="./img/Neiw/Neiw-cjcuTitle01.png" alt="踏雪巡螢...">
+                            </div>
+                            <div class="mini2">
+                                <img class="img2" src="./img/Neiw/Neiw-fireflyTitle02.png" alt="螢火蟲季">
+                            </div>
+                        </div>
+                        <div class="col-1"></div>
+                        <div class="col-6 text-Neiw-cjcu01 text-justify">
+                            <p>新竹縣內灣東窩野溪被評比為全台最佳賞螢區之一，螢火蟲季將於4月17日登場，每天出現的極大期是晚上7點到8點，主要賞螢的地點在東窩星海螢區及南坪古道 。</p>
+                        </div>
+                    </div>
+                </div>
+                <img class="img2" src="./img/Neiw/Neiw-firefly01.jpg" alt="螢火蟲圖">
+            </div>
+        </section>
+        <section>
+            <div class="container section6">
+                <div class="row ">
+                    <div class="col-5">
+                        <div class="mini">
+                            <img class="img" src="./img/Neiw/Neiw-firefly02.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-1"></div>
+                    <div class="col-6 text-Neiw-firefly01 align-self-center">
+                        <p>螢火蟲喜歡溫暖潮濕的天氣，因此下過雨的夜晚，更容易見到大量的螢火蟲。</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <img src="./img/Neiw/Neiw-firefly03.jpg" alt="螢蟲飛舞">
+                    </div>
+                </div>
+        </section>
+        <section>
+            <div class="container section7">
+                <div class="row">
+                    <div class="col-6 text-Neiw-oldstr01 text-justify">
+                        <p>內灣戲院建於民國39年，由當時的議員所建，主人因一方面經營山場，一方面經營製腦，由於工人休閒需要，在當時僅一千餘人的小村落營造名聞遐邇的戲院。</p>
+                    </div>
+                    <div class="col-2"></div>
                     <div class="col-4">
-                        <div>
-                            <img src="./img/Shal/Shal-cjcuTitle01.png" alt="台鐵唯一">
+                        <div class="mini1">
+                            <img class="img1" src="./img/Neiw/Neiw-oldstrTitle01.png" alt="懷舊電影院...">
                         </div>
-                        <div>
-                            <img src="./img/Shal/Shal-cjcuTitle02.png" alt="四個字的車站 長榮大學站">
+                        <div class="mini2">
+                            <img src="./img/Neiw/Neiw-oldstrTitle02.png" alt="內灣老街">
                         </div>
-                    </div>
-                    <div class="col-6 text-justify">
-                        <p class="my-0">
-                            <span>|</span>長榮大學位於台南歸仁，鄰近高鐵、中山高、南二高及機場，校門口設有台鐵沙崙支線「長榮大學站」，是全國校園內唯一有火車站的大學，位居交通樞紐。
-                        </p>
                     </div>
                 </div>
                 <div class="row">
-                    <img class="rounded-lg" src="./img/Shal/Shal-cjcu01.jpg" alt="長榮大學站">
+                    <div class="col">
+                        <img class="img2" src="./img/Neiw/Neiw-oldstr01.jpg" alt="內灣戲院圖">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <!-- 5張圖 -->
+            <div class="container section8">
+                <div class="row ">
+                    <div class="col">
+                        <img class="img1" src="./img/Neiw/Neiw-oldstr02.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3">
+                        <img src="./img/Neiw/Neiw-oldstr03.jpg" alt="">
+                    </div>
+                    <div class="col-3 ">
+                        <img src="./img/Neiw/Neiw-oldstr04.jpg" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/Neiw/Neiw-oldstr06.jpg" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/Neiw/Neiw-oldstr07.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
