--- a/Jiji.html
+++ b/Jiji.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>沙崙支線 | 鐵支路</title>
+    <title>集集支線 | 鐵支路</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
 
     <link rel="stylesheet" href="./css/main_style.css">
-    <link rel="stylesheet" href="./css/Shal_style.css">
+    <link rel="stylesheet" href="./css/Jiji_style.css">
 </head>
 
 <body>
@@ -105,91 +105,90 @@
             <div class="container-fluid img-main-bgi">
                 <div class="container section2">
                     <div class="row">
-                        <div class="col"><img src="./img/Shal/main-Shal-title.png" alt="沙崙支旅"></div>
+                        <div class="col"><img src="./img/Jiji/main-Jiji-title.png" alt="集集支旅"></div>
                     </div>
                     <div class="row text-justify text-main-cotent">
                         <div class="col">
                             <p class="my-0">
-                                <span>|</span>臺鐵為了方便旅客轉乘高鐵，於民國100年1月2日正式啟用，臺鐵沙崙線列車取代原本搭高鐵接駁巴士，交通時間由原本50分鐘縮短至22分鐘。沙崙線全程皆為高架，還開了首例橫跨國道一號，為臺鐵捷運化轉型實例。特別的是路線還經過長榮大學內，還能搭到別具臺南特色的彩繪圖案列車，讓你的接駁時刻更有樂趣！
+                                <span>|</span>集集支線為臺鐵最長的鐵路支線，最初興建原因為水力發電興建水庫的運輸鐵路，後來因豐富的觀光資源，成為臺灣觀光鐵道的先驅，它也是目前南投縣唯一仍在
+                                營運的鐵路。車埕車站的「埕」字是臺灣閩南語「場」的意思。昔日埔里糖廠於1916年始以臺車運送糖到車埕車站，將生產的糖運出，在車埕車站前有許多臺車停放，站名也因此而來。
                             </p>
                         </div>
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-6">
-                            <div class="text-center img-main-km"><img src="./img/Shal/main-Shal-km.png"
-                                    alt="支線總長為5.3公里"></div>
+                            <div class="text-center img-main-km"><img src="./img/Jiji/main-Jiji-km.png"
+                                    alt="支線總長為29.7公里"></div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="img-main-line"><img src="./img/Shal/main-Shal-line.png" alt="起站中洲站 迄站沙崙站"></div>
-                            <div class="img-main-train"><img src="./img/Shal/main-Shal-train.png" alt="台鐵列車"></div>
+                            <div class="img-main-line"><img src="./img/Jiji/main-Jiji-line.png" alt="起站中洲站 迄站沙崙站"></div>
+                            <div class="img-main-train"><img src="./img/Jiji/main-Jiji-train.png" alt="台鐵列車"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- 版型A -->
         <section>
             <div class="container section3">
-                <div class="row">
-                    <div class="col-6 text-left">
-                        <img src="./img/Shal/Shal-chimeTitle01.png" alt="壯觀的奇美博物館">
-                    </div>
-                    <div class="col-6 text-right">
-                        <img src="./img/Shal/Shal-chimeTitle02.png" alt="支線沙崙站 轉乘 西部幹線保安站">
+                <div class="row custom-row-mx-15 ">
+                    <div class="col">
+                        <img src="./img/Jiji/Jiji-roadTitle.png" alt="涵碧步道標題">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row img-Jiji-road01">
                     <div class="col">
-                        <img class="rounded-lg" src="./img/Shal/Shal-chime01.jpg" alt="夜晚的奇美博物館">
+                        <img src="./img/Jiji/Jiji-road01.jpg" alt="步道圖">
                     </div>
                 </div>
-                <div class="row text-justify text-Shal-chime01">
+                <div class="row custom-row-mx-15 text-Jiji-road01 text-justify">
                     <div class="col">
-                        <p class="my-0">
-                            <span>|</span>當看到這樣的景象，會以為這是歐洲某處宮殿的景致吧，走過陽光下映著彩虹的阿波羅噴泉，穿過護城河上的橋墩，勇猛優雅的白色獅頭一字排開，橋面上莊嚴的奧林帕斯眾神也整齊陳列，走過橋面，博物館正面入口採高聳的圓頂造型及各面不同的希臘列柱設計，這樣的氣勢更能襯托出典藏寶物宮殿的華麗。
+                        <p><span>|</span>涵碧步道乃指蜿蜒於整個涵碧樓的森林小道，環抱涵碧山，蜿蜒緩行，全程步行時間約一個小時。坡度平緩，階梯處均以紅磚砌築，於綠林中更顯古樸典雅。步道兩側林木蒼蒼，樹流蓊鬱，常見五色鳥、山頭紅、繡眼畫眉等低海拔鳥類。由步道遠眺日月潭，水面如鏡，倒映朦朧山色，風光旖旎，堪稱一絕。
                         </p>
+                    </div>
+                </div>
+        </section>
+        <section>
+            <div class="section4">
+                <div class="img-Jiji-car01">
+                    <div class="custom-row-mx-15 ">
+                        <div class="container custom-row-mx-15">
+                            <div class="row">
+                                <div class="col-4 Jiji-car-title">
+                                    <img src="./img/Jiji/Jiji-carTitle01.png" alt="纜車">
+                                    <img src="./img/Jiji/Jiji-carTitle02.png" alt="鄰近水里站">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row custom-row-mx-15 text-Jiji-car01 text-justify">
+                        <div class="col">
+                            <p><span>|</span>日月潭纜車連結了伊達邵和九族文化村，纜車上可一覽日月潭的米其林三星級湖景，欣賞群山環繞、吹著徐徐微風。車廂的紅黃藍三色，分別代表日(紅色)、月(黃色)、潭(藍色)三個意像，也代表了日九新遊程的歡樂(紅色)、樂活(黃色)與生態(藍色)水陸空三棲一體的繽紛三彩。
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- 版型B -->
         <section>
-            <div class="container section4">
-                <div class="row">
-                    <div class="col">
-                        <img class="rounded-lg" src="./img/Shal/Shal-chime02.jpg"
-                            alt="榮耀天使 路易‧巴里亞斯 Louis-Ernest Barrias 奇美館 許文龍">
-                        <p class="col-4 my-0 text-justify">安置於博物館建築物最高點的「榮耀天使」雕塑，是臨摹法國雕塑家路易‧巴里亞斯(Louis-Ernest
-                            Barrias)的作品，這座手持桂冠和號角的榮耀天使，將永遠佇立於奇美館建築的最頂端，象徵守護這塊土地，榮耀世間的美好人事物。在2015年開幕的台南都會公園奇美博物館，主建築正面全長150公尺寬，高42公尺，耗資13億，是奇美集團的許文龍先生建造完成後捐贈給台南市的大禮物，開幕後也成為全台灣遊客甚至是國外遊客的必到之處。
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- 版型C -->
-        <section>
-            <div class="container section5">
-                <div class="row justify-content-between">
-                    <div class="col-4">
-                        <div>
-                            <img src="./img/Shal/Shal-cjcuTitle01.png" alt="台鐵唯一">
+            <div class="section5">
+                <div class="container">
+                    <div class="row custom-row-mx-15 justify-content-between">
+                        <div class="col-4">
+                            <div class="row img-Jiji-islandTitle01"></div>
+                            <div class="row img-Jiji-islandTitle02"></div>
                         </div>
-                        <div>
-                            <img src="./img/Shal/Shal-cjcuTitle02.png" alt="四個字的車站 長榮大學站">
+                        <div class="col-6 text-Jiji-island01 text-justify">
+                            <p><span>|</span>相傳拉魯島原是邵族人虔信祖靈存聚神聖的一座聖山，邵族人的「先生媽」擇定人選時，得到祖靈的同意，女巫才得到資格，日後才能負起念咒語、主持祭典的重任。
+                            </p>
                         </div>
                     </div>
-                    <div class="col-6 text-justify">
-                        <p class="my-0">
-                            <span>|</span>長榮大學位於台南歸仁，鄰近高鐵、中山高、南二高及機場，校門口設有台鐵沙崙支線「長榮大學站」，是全國校園內唯一有火車站的大學，位居交通樞紐。
-                        </p>
+                    <div class="row custom-row-mx-15 img-Jiji-island01">
                     </div>
                 </div>
-                <div class="row">
-                    <img class="rounded-lg" src="./img/Shal/Shal-cjcu01.jpg" alt="長榮大學站">
-                </div>
-            </div>
         </section>
         <!-- 下一支線swiper -->
         <section>
