--- a/Ping.html
+++ b/Ping.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>沙崙支線 | 鐵支路</title>
+    <title>平溪支線 | 鐵支路</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
 
     <link rel="stylesheet" href="./css/main_style.css">
-    <link rel="stylesheet" href="./css/Shal_style.css">
+    <link rel="stylesheet" href="./css/Ping_style.css">
 </head>
 
 <body>
@@ -105,92 +105,82 @@
             <div class="container-fluid img-main-bgi">
                 <div class="container section2">
                     <div class="row">
-                        <div class="col"><img src="./img/Shal/main-Shal-title.png" alt="沙崙支旅"></div>
+                        <div class="col"><img src="./img/Ping/main-Ping-title.png" alt="平溪支旅"></div>
                     </div>
                     <div class="row text-justify text-main-cotent">
                         <div class="col">
                             <p class="my-0">
-                                <span>|</span>臺鐵為了方便旅客轉乘高鐵，於民國100年1月2日正式啟用，臺鐵沙崙線列車取代原本搭高鐵接駁巴士，交通時間由原本50分鐘縮短至22分鐘。沙崙線全程皆為高架，還開了首例橫跨國道一號，為臺鐵捷運化轉型實例。特別的是路線還經過長榮大學內，還能搭到別具臺南特色的彩繪圖案列車，讓你的接駁時刻更有樂趣！
+                                <span>|</span>平溪線起初是『台陽碳礦株式會社』為了運煤而興建。早年行駛平溪線的藍色兩節柴油客車，已從民國87年起停駛，改駛新款柴油復興號。在一座座煤礦相繼荒廢後，平溪線也一度面臨被廢棄的命運，所幸近年來國人鐵道旅行的風氣漸興，加上平溪天燈及礦業議題的炒熱，使平溪線再度獲得新生命。
                             </p>
                         </div>
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-6">
-                            <div class="text-center img-main-km"><img src="./img/Shal/main-Shal-km.png"
-                                    alt="支線總長為5.3公里"></div>
+                            <div class="text-center img-main-km"><img src="./img/Ping/main-Ping-km.png"
+                                    alt="支線總長為12.7公里"></div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="img-main-line"><img src="./img/Shal/main-Shal-line.png" alt="起站中洲站 迄站沙崙站"></div>
-                            <div class="img-main-train"><img src="./img/Shal/main-Shal-train.png" alt="台鐵列車"></div>
+                            <div class="img-main-line"><img src="./img/Ping/main-Ping-line.png" alt="起站中洲站 迄站沙崙站"></div>
+                            <div class="img-main-train"><img src="./img/Ping/main-Ping-train.png" alt="台鐵列車"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- 版型A -->
+
         <section>
             <div class="container section3">
-                <div class="row">
-                    <div class="col-6 text-left">
-                        <img src="./img/Shal/Shal-chimeTitle01.png" alt="壯觀的奇美博物館">
-                    </div>
-                    <div class="col-6 text-right">
-                        <img src="./img/Shal/Shal-chimeTitle02.png" alt="支線沙崙站 轉乘 西部幹線保安站">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <img class="rounded-lg" src="./img/Shal/Shal-chime01.jpg" alt="夜晚的奇美博物館">
-                    </div>
-                </div>
-                <div class="row text-justify text-Shal-chime01">
-                    <div class="col">
-                        <p class="my-0">
-                            <span>|</span>當看到這樣的景象，會以為這是歐洲某處宮殿的景致吧，走過陽光下映著彩虹的阿波羅噴泉，穿過護城河上的橋墩，勇猛優雅的白色獅頭一字排開，橋面上莊嚴的奧林帕斯眾神也整齊陳列，走過橋面，博物館正面入口採高聳的圓頂造型及各面不同的希臘列柱設計，這樣的氣勢更能襯托出典藏寶物宮殿的華麗。
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- 版型B -->
-        <section>
-            <div class="container section4">
-                <div class="row">
-                    <div class="col">
-                        <img class="rounded-lg" src="./img/Shal/Shal-chime02.jpg"
-                            alt="榮耀天使 路易‧巴里亞斯 Louis-Ernest Barrias 奇美館 許文龍">
-                        <p class="col-4 my-0 text-justify">安置於博物館建築物最高點的「榮耀天使」雕塑，是臨摹法國雕塑家路易‧巴里亞斯(Louis-Ernest
-                            Barrias)的作品，這座手持桂冠和號角的榮耀天使，將永遠佇立於奇美館建築的最頂端，象徵守護這塊土地，榮耀世間的美好人事物。在2015年開幕的台南都會公園奇美博物館，主建築正面全長150公尺寬，高42公尺，耗資13億，是奇美集團的許文龍先生建造完成後捐贈給台南市的大禮物，開幕後也成為全台灣遊客甚至是國外遊客的必到之處。
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- 版型C -->
-        <section>
-            <div class="container section5">
-                <div class="row justify-content-between">
-                    <div class="col-4">
-                        <div>
-                            <img src="./img/Shal/Shal-cjcuTitle01.png" alt="台鐵唯一">
-                        </div>
-                        <div>
-                            <img src="./img/Shal/Shal-cjcuTitle02.png" alt="四個字的車站 長榮大學站">
+                <div class="row custom-row-mx-15  ">
+                    <div class="col-6">
+                        <div class="mini">
+                            <img class="img1" src="./img/Ping/Ping-waterTitle01.png" alt="瀑布標題">
                         </div>
                     </div>
-                    <div class="col-6 text-justify">
-                        <p class="my-0">
-                            <span>|</span>長榮大學位於台南歸仁，鄰近高鐵、中山高、南二高及機場，校門口設有台鐵沙崙支線「長榮大學站」，是全國校園內唯一有火車站的大學，位居交通樞紐。
+                    <div class="col-4"></div>
+                    <div class="col-2">
+                        <div class="mini1">
+                            <img class="img2" src="./img/Ping/Ping-waterTitle02.png" alt="鄰近平溪站">
+                        </div>
+                    </div>
+                </div>
+                <div class="row custom-row-mx-15">
+                    <div class="col-12 img-Ping-water01">
+                    </div>
+                </div>
+                <div class="row custom-row-mx-15 text-Ping-water01 text-justify">
+                    <div class="col">
+                        <p><span>|</span>當看到這樣的景象，會以為這是歐洲某處宮殿的景致吧，走過陽光下映著彩虹的阿波羅噴泉，穿過護城河上的橋墩，勇猛優雅的白色獅頭一字排開，橋面上莊嚴的奧林帕斯眾神也整齊陳列，走過橋面，博物館正面入口採高聳的圓頂造型及各面不同的希臘列柱設計，這樣的氣勢更能襯托出典藏寶物宮殿的華麗。
                         </p>
                     </div>
                 </div>
-                <div class="row">
-                    <img class="rounded-lg" src="./img/Shal/Shal-cjcu01.jpg" alt="長榮大學站">
+            </div>
+        </section>
+        <section>
+            <div class="container section4 ">
+                <div class="row align-items-center">
+                    <div class="col-5 ">
+                        <div class="mini">
+                            <img class="title-Ping-lamp01" src="./img/Ping/Ping-lampTitle.png" alt="">
+                        </div>
+                        <p class="text-Ping-lamp01 text-justify">
+                            清道光年間，當地為宛如人間的仙境富足村落，當時由於山區交通不發達，官府無法管轄，遂成為山賊覬覦之地。村民為保性命，在冬至過後，即收拾家當遁入山區，直到元宵才派人回村察看，確定安全後，釋放天燈以報平安，演變而成今日的平溪天燈節。
+                        </p>
+                    </div>
+                    <div class="col-1"></div>
+                    <div class="col-6">
+                        <img class="img1" src="./img/Ping/Ping-lamp01.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
+        <section>
+            <div class="section5">
+                <img src="./img/Ping/Ping-lamp02.jpg" alt="全螢幕天燈圖">
+            </div>
+        </section>
+
         <!-- 下一支線swiper -->
         <section>
             <div class="container section6">
