update 路線圖, 火車圖

--- a/Jiji.html
+++ b/Jiji.html
@@ -82,21 +82,8 @@
                     </div>
                 </div>
                 <div class="row px-3 justify-content-center">
-                    <div class="col-3 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 中洲站">
-                        <p class="m-0 ml-4">中洲站</p>
-                    </div>
-                    <div class="col-2 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtnArrow.png" alt="經由">
-                    </div>
-                    <div class="col-3 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 長榮大學站">
-                        <p class="m-0 ml-4">長榮大學站</p>
-                    </div>
-                    <div class="col-2 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtnlast.png" alt="沙崙線 沙崙站">
-                        <p class="m-0 ml-4">沙崙站</p>
-                    </div>
+                    <div class="col d-flex justify-content-center"><img src="./img/Jiji/Jiji-StaMap.png"
+                            alt="集集線 二水站 經由 源泉站 車埕站"></div>
                 </div>
             </div>
         </section>
@@ -123,7 +110,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="img-main-line"><img src="./img/Jiji/main-Jiji-line.png" alt="起站中洲站 迄站沙崙站"></div>
+                            <div class="img-main-line"><img src="./img/Jiji/main-Jiji-line.png" alt="起站二水站 迄站車埕站"></div>
                             <div class="img-main-train"><img src="./img/Jiji/main-Jiji-train.png" alt="台鐵列車"></div>
                         </div>
                     </div>
@@ -132,7 +119,7 @@
         </section>
         <section>
             <div class="container section3">
-                <div class="row custom-row-mx-15 ">
+                <div class="row">
                     <div class="col">
                         <img src="./img/Jiji/Jiji-roadTitle.png" alt="涵碧步道標題">
                     </div>
@@ -142,7 +129,7 @@
                         <img src="./img/Jiji/Jiji-road01.jpg" alt="步道圖">
                     </div>
                 </div>
-                <div class="row custom-row-mx-15 text-Jiji-road01 text-justify">
+                <div class="row text-Jiji-road01 text-justify">
                     <div class="col">
                         <p><span>|</span>涵碧步道乃指蜿蜒於整個涵碧樓的森林小道，環抱涵碧山，蜿蜒緩行，全程步行時間約一個小時。坡度平緩，階梯處均以紅磚砌築，於綠林中更顯古樸典雅。步道兩側林木蒼蒼，樹流蓊鬱，常見五色鳥、山頭紅、繡眼畫眉等低海拔鳥類。由步道遠眺日月潭，水面如鏡，倒映朦朧山色，風光旖旎，堪稱一絕。
                         </p>
@@ -152,8 +139,8 @@
         <section>
             <div class="section4">
                 <div class="img-Jiji-car01">
-                    <div class="custom-row-mx-15 ">
-                        <div class="container custom-row-mx-15">
+                    <div class="custom-row-mx-15">
+                        <div class="container">
                             <div class="row">
                                 <div class="col-4 Jiji-car-title">
                                     <img src="./img/Jiji/Jiji-carTitle01.png" alt="纜車">
@@ -164,7 +151,7 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div class="row custom-row-mx-15 text-Jiji-car01 text-justify">
+                    <div class="row text-Jiji-car01 text-justify">
                         <div class="col">
                             <p><span>|</span>日月潭纜車連結了伊達邵和九族文化村，纜車上可一覽日月潭的米其林三星級湖景，欣賞群山環繞、吹著徐徐微風。車廂的紅黃藍三色，分別代表日(紅色)、月(黃色)、潭(藍色)三個意像，也代表了日九新遊程的歡樂(紅色)、樂活(黃色)與生態(藍色)水陸空三棲一體的繽紛三彩。
                             </p>
@@ -176,7 +163,7 @@
         <section>
             <div class="section5">
                 <div class="container">
-                    <div class="row custom-row-mx-15 justify-content-between">
+                    <div class="row justify-content-between">
                         <div class="col-4">
                             <div class="row img-Jiji-islandTitle01"></div>
                             <div class="row img-Jiji-islandTitle02"></div>
@@ -186,7 +173,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="row custom-row-mx-15 img-Jiji-island01">
+                    <div class="row img-Jiji-island01">
                     </div>
                 </div>
         </section>
