--- a/Shal.html
+++ b/Shal.html
@@ -82,21 +82,8 @@
                     </div>
                 </div>
                 <div class="row px-3 justify-content-center">
-                    <div class="col-3 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 中洲站">
-                        <p class="m-0 ml-4">中洲站</p>
-                    </div>
-                    <div class="col-2 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtnArrow.png" alt="經由">
-                    </div>
-                    <div class="col-3 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 長榮大學站">
-                        <p class="m-0 ml-4">長榮大學站</p>
-                    </div>
-                    <div class="col-2 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtnlast.png" alt="沙崙線 沙崙站">
-                        <p class="m-0 ml-4">沙崙站</p>
-                    </div>
+                    <div class="col d-flex justify-content-center"><img src="./img/Shal/Shal-StaMap.png"
+                            alt="沙崙線 中洲站 經由 長榮大學站 沙崙站"></div>
                 </div>
             </div>
         </section>
@@ -122,8 +109,9 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="img-main-line"><img src="./img/Shal/main-Shal-line.png" alt="起站中洲站 迄站沙崙站"></div>
-                            <div class="img-main-train"><img src="./img/Shal/main-Shal-train.png" alt="台鐵列車"></div>
+                            <img src="./img/Shal/main-Shal-trainLine.png" alt="台鐵列車 起站中洲站 迄站沙崙站">
+                            <!-- <div class="img-main-line"><img src="./img/Shal/main-Shal-line.png" alt="起站中洲站 迄站沙崙站"></div>
+                            <div class="img-main-train"><img src="./img/Shal/main-Shal-train.png" alt="台鐵列車"></div> -->
                         </div>
                     </div>
                 </div>
