--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-xl navbar-dark nav-white nav1">
+        <nav class="navbar navbar-expand-xl navbar-dark nav-white">
             <div class="container">
                 <a class="navbar-brand py-0" href="./index.html">
                     <img src="./img/main/Logo.png" alt="台鐵 鐵路 支線 鐵支路 Logo"></a>
@@ -62,25 +62,14 @@
                 </div>
             </div>
         </nav>
-        <nav class="navbar navbar-expand-xl navbar-light nav-white py-0 pb-4 nav2">
-            <div class="container">
-                <div class="collapse navbar-collapse justify-content-center">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <img src="./img/index/index-navpoint.png" alt="">
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
     </header>
     <main>
         <section>
             <div class="container-fluid img-index-bgi">
                 <div class="container index1">
                     <div class="row">
-                        <div class="col-6">
-                            <img src="./img/main/Logo.png" alt="">
+                        <div class="col">
+                            <img src="./img/main/Logo.png" alt="鐵支路 LOGO">
                         </div>
                     </div>
                     <div class="row">
@@ -104,6 +93,7 @@
         </section>
         <section>
             <div class="container index2">
+                
                 <div class="row">
                     <div class="col-2">
                         <a href="./Neiw.html"><img src="./img/index/index-btn-Neiw.png" alt="前進內灣線"></a>
