modify 內灣線, 六家線
1. 調整完內灣線, 六家線 web版
2. 調整下一站btn資料路徑

--- a/Neiw.html
+++ b/Neiw.html
@@ -82,21 +82,8 @@
                     </div>
                 </div>
                 <div class="row px-3 justify-content-center">
-                    <div class="col-3 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 中洲站">
-                        <p class="m-0 ml-4">中洲站</p>
-                    </div>
-                    <div class="col-2 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtnArrow.png" alt="經由">
-                    </div>
-                    <div class="col-3 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 長榮大學站">
-                        <p class="m-0 ml-4">長榮大學站</p>
-                    </div>
-                    <div class="col-2 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtnlast.png" alt="沙崙線 沙崙站">
-                        <p class="m-0 ml-4">沙崙站</p>
-                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <img src="./img/Neiw/Neiw-StaMap.png" alt="內灣線 新竹站 經由 榮華站 內灣站"></div>
                 </div>
             </div>
         </section>
@@ -110,7 +97,7 @@
                     <div class="row text-justify text-main-cotent">
                         <div class="col">
                             <p class="my-0">
-                                <span>|</span>內灣線是一條由國人建造的支線，前身是輕便車道，從新竹車站開始行駛往東，由靠海的平原逐漸進入山區，早期用來運送煤礦及木材。內灣線的設立，原本就是為了山林資源，例如石灰石、煤礦、矽沙等礦藏，和極為珍貴的香杉、赤柯、檜木，以及早期用做煉腦的樟樹等，因此隨著光復後的產業發展需求，便開始了內灣支線超過半個世紀的火車快飛歲月。
+                                <span>|</span>內灣線是一條由國人建造的支線，前身是輕便車道，從新竹車站開始行駛往東，由靠海的平原逐漸進入山區，早期用來運送煤礦及木材。內灣線的設立，原本就是為了山林資源，例如石灰石、煤礦、矽沙等礦藏，和極為珍貴的香杉、赤柯、檜木，以及早期用做煉腦的樟樹等，因此隨著光復後的產業發展需求，便開始了內灣支線超過半個世紀的歲月。
                             </p>
                         </div>
                     </div>
@@ -122,172 +109,152 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="img-main-line"><img src="./img/Neiw/main-Neiw-line.png" alt="起站中洲站 迄站沙崙站"></div>
-                            <div class="img-main-train"><img src="./img/Neiw/main-Neiw-train.png" alt="台鐵列車"></div>
+                            <img src="./img/Neiw/main-Neiw-trainLine.png" alt="台鐵列車 起站新竹站 迄站內灣站">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
+        <!-- 版型F -->
         <section>
-            <div class="section3">
-                <div class="img-Neiw-hex01">
-                    <div class="custom-row-mx-15 ">
-                        <div class="container ">
-                            <div class="row">
-                                <div class="col-4 Neiw-hex-title ">
-                                    <div class="mini1">
-                                        <img class="img1" src="./img/Neiw/Neiw-hexTitle.png" alt="">
-                                    </div>
-                                    <div class="mini2 ">
-                                        <img class="img2 " src="./img/Neiw/Neiw-hexSta.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+            <div class="container-fluid img-Neiw-hex01">
+                <div class="container section3">
+                    <div class="row">
+                        <div class="col"><img src="./img/Neiw//Neiw-hexTitle.png" alt="復古木造合興車站"></div>
                     </div>
-                </div>
-                <div class="container">
-                    <div class="row custom-row-mx-15 text-Neiw-hex01 text-justify">
-                        <div class="col">
-                            <p><span>|</span>曾經合興站的站房漸被棄置，台鐵一度打算廢站，後來一對夫妻出面認養舊車站，於是促成了合興車站的重生，該站也因為這對夫妻的故事而聲名大噪，繼而被媒體冠上「愛情火車站」這個浪漫的別名。
+                    <div class="row">
+                        <div class="col"><img src="./img/Neiw/Neiw-hexSta.png" alt="鄰近站點 合興站"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-justify">
+                            <p class="my-0">
+                                <span>|</span>曾經合興站的站房漸被棄置，台鐵一度打算廢站，後來一對夫妻出面認養舊車站，於是促成了合興車站的重生，該站也因為這對夫妻的故事而聲名大噪，繼而被媒體冠上「愛情火車站」這個浪漫的別名。站內也寫著這對夫妻的故事：1958年，就讀新竹中學高一的曾春兆，在火車上認識鄰校成績全年級第一名的女孩。1960年，上學期第三次月考的那天，他睡過頭，眼看著第一班火車開走。沒有計程車，也沒有其他交通工具。他當時心想，若因趕不上考試而留級，和那位女孩的友誼勢必無法繼續。曾春兆唯一的選擇：追火車，他沿著鐵路跑了2.1公里到下一站－九讚頭追上。多年後也追上了她－彭智惠。
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- 版型G -->
         <section>
-            <div class="section4">
-                <img class="img1" src="./img/Neiw/Neiw-hex02-3.jpg" alt="">
-                <img class="img2" src="./img/Neiw/Neiw-hex02.jpg" alt="">
-                <img class="img3" src="./img/Neiw/Neiw-hex02-2.jpg" alt="">
+            <div class="container section4">
+                <div class="row">
+                    <div class="col"><img src="./img/Neiw/Neiw-hex02.jpg" alt="合興車站"></div>
+                </div>
             </div>
         </section>
+        <!-- 版型C-1 -->
         <section>
-            <div class="section5">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-5">
-                            <div class="mini1">
-                                <img class="img1" src="./img/Neiw/Neiw-cjcuTitle01.png" alt="踏雪巡螢...">
+            <div class="container-fluid img-Neiw-firefly01">
+                <div class="container section5">
+                    <div class="row justify-content-between">
+                        <div class="col-4">
+                            <div>
+                                <img src="./img/Neiw/Neiw-cjcuTitle01.png" alt="踏雪巡螢 幸福山城">
                             </div>
-                            <div class="mini2">
-                                <img class="img2" src="./img/Neiw/Neiw-fireflyTitle02.png" alt="螢火蟲季">
+                            <div>
+                                <img src="./img/Neiw/Neiw-fireflyTitle02.png" alt="螢火蟲季">
                             </div>
                         </div>
-                        <div class="col-1"></div>
-                        <div class="col-6 text-Neiw-cjcu01 text-justify">
-                            <p>新竹縣內灣東窩野溪被評比為全台最佳賞螢區之一，螢火蟲季將於4月17日登場，每天出現的極大期是晚上7點到8點，主要賞螢的地點在東窩星海螢區及南坪古道 。</p>
+                        <div class="col-6 text-justify">
+                            <p class="my-0">
+                                <span>|</span>新竹縣內灣東窩野溪被評比為全台最佳賞螢區之一，螢火蟲季將於4月17日登場，每天出現的極大期是晚上7點到8點，主要賞螢的地點在東窩星海螢區及南坪古道
+                                。
+                            </p>
                         </div>
                     </div>
+
                 </div>
-                <img class="img2" src="./img/Neiw/Neiw-firefly01.jpg" alt="螢火蟲圖">
             </div>
         </section>
+        <!-- 版型H -->
         <section>
             <div class="container section6">
-                <div class="row ">
-                    <div class="col-5">
-                        <div class="mini">
-                            <img class="img" src="./img/Neiw/Neiw-firefly02.jpg" alt="">
-                        </div>
-                    </div>
-                    <div class="col-1"></div>
-                    <div class="col-6 text-Neiw-firefly01 align-self-center">
-                        <p>螢火蟲喜歡溫暖潮濕的天氣，因此下過雨的夜晚，更容易見到大量的螢火蟲。</p>
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-4"><img class="rounded-lg" src="./img/Neiw/Neiw-firefly02.jpg" alt="油桐花"></div>
+                    <div class="col-6 text-justify">
+                        <p class="my-0"><span>|</span>螢火蟲喜歡溫暖潮濕的天氣，因此下過雨的夜晚，更容易見到大量的螢火蟲。</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
-                        <img src="./img/Neiw/Neiw-firefly03.jpg" alt="螢蟲飛舞">
-                    </div>
+                    <div class="col"><img class="rounded-lg" src="./img/Neiw/Neiw-firefly03.jpg" alt="螢蟲飛舞"></div>
                 </div>
+            </div>
         </section>
+        <!-- 版型C-2 -->
         <section>
             <div class="container section7">
-                <div class="row">
-                    <div class="col-6 text-Neiw-oldstr01 text-justify">
-                        <p>內灣戲院建於民國39年，由當時的議員所建，主人因一方面經營山場，一方面經營製腦，由於工人休閒需要，在當時僅一千餘人的小村落營造名聞遐邇的戲院。</p>
+                <div class="row justify-content-between">
+                    <div class="col-6 text-justify">
+                        <p class="my-0">
+                            <span>|</span>內灣戲院建於民國39年，由當時的議員所建，主人因一方面經營山場，一方面經營製腦，由於工人休閒需要，在當時僅一千餘人的小村落營造名聞遐邇的戲院。</p>
                     </div>
-                    <div class="col-2"></div>
                     <div class="col-4">
-                        <div class="mini1">
-                            <img class="img1" src="./img/Neiw/Neiw-oldstrTitle01.png" alt="懷舊電影院...">
+                        <div>
+                            <img src="./img/Neiw/Neiw-oldstrTitle01.png" alt="懷舊電影院 必拍景點">
                         </div>
-                        <div class="mini2">
+                        <div>
                             <img src="./img/Neiw/Neiw-oldstrTitle02.png" alt="內灣老街">
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img class="img2" src="./img/Neiw/Neiw-oldstr01.jpg" alt="內灣戲院圖">
+                        <img class="rounded-lg" src="./img/Neiw/Neiw-oldstr01.jpg" alt="內灣戲院">
                     </div>
                 </div>
             </div>
         </section>
+        <!-- 版型I -->
         <section>
-            <!-- 5張圖 -->
             <div class="container section8">
-                <div class="row ">
-                    <div class="col">
-                        <img class="img1" src="./img/Neiw/Neiw-oldstr02.jpg" alt="">
-                    </div>
+                <div class="row">
+                    <div class="col"><img class="rounded-lg" src="./img/Neiw/Neiw-oldstr02.jpg" alt="油桐花"></div>
                 </div>
                 <div class="row">
-                    <div class="col-3">
-                        <img src="./img/Neiw/Neiw-oldstr03.jpg" alt="">
-                    </div>
-                    <div class="col-3 ">
-                        <img src="./img/Neiw/Neiw-oldstr04.jpg" alt="">
-                    </div>
-                    <div class="col-3">
-                        <img src="./img/Neiw/Neiw-oldstr06.jpg" alt="">
-                    </div>
-                    <div class="col-3">
-                        <img src="./img/Neiw/Neiw-oldstr07.jpg" alt="">
-                    </div>
+                    <div class="col-3"><img class="rounded-lg" src="./img/Neiw/Neiw-oldstr03.jpg" alt="芝麻豆腐"></div>
+                    <div class="col-3"><img class="rounded-lg" src="./img/Neiw/Neiw-oldstr04.jpg" alt="研磨擂茶"></div>
+                    <div class="col-3"><img class="rounded-lg" src="./img/Neiw/Neiw-oldstr06.jpg" alt="豆腐"></div>
+                    <div class="col-3"><img class="rounded-lg" src="./img/Neiw/Neiw-oldstr07.jpg" alt="沖倒擂茶"></div>
                 </div>
             </div>
         </section>
         <!-- 下一支線swiper -->
         <section>
-            <div class="container section6">
+            <div class="container nextTrip">
                 <div class="row">
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-prev"><img src="./img/main/main-btnL.png" alt="往前一支線"></div>
+                        <div class="swiper-button-prev"><img src="./img/main/nextTrip/main-btnL.png" alt="往前一支線"></div>
                     </div>
                     <div class="col-10 m-auto">
                         <!-- Swiper: Loop Mode with Multiple Slides Per Group -->
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Neiw.png" alt="內灣線">
+                                    <img src="./img/main/nextTrip/main-btn-Neiw.png" alt="內灣線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Liuj.png" alt="六家線">
+                                    <img src="./img/main/nextTrip/main-btn-Liuj.png" alt="六家線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Jiji.png" alt="集集線">
+                                    <img src="./img/main/nextTrip/main-btn-Jiji.png" alt="集集線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Shal.png" alt="沙崙線">
+                                    <img src="./img/main/nextTrip/main-btn-Shal.png" alt="沙崙線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Shen.png" alt="深澳線">
+                                    <img src="./img/main/nextTrip/main-btn-Shen.png" alt="深澳線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Ping.png" alt="平溪線">
+                                    <img src="./img/main/nextTrip/main-btn-Ping.png" alt="平溪線">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-next"><img src="./img/main/main-btnR.png" alt="往後一支線"></div>
+                        <div class="swiper-button-next"><img src="./img/main/nextTrip/main-btnR.png" alt="往後一支線"></div>
                     </div>
                 </div>
             </div>
