--- a/Jiji.html
+++ b/Jiji.html
@@ -82,8 +82,8 @@
                     </div>
                 </div>
                 <div class="row px-3 justify-content-center">
-                    <div class="col d-flex justify-content-center"><img src="./img/Jiji/Jiji-StaMap.png"
-                            alt="集集線 二水站 經由 源泉站 車埕站"></div>
+                    <div class="col d-flex justify-content-center">
+                        <img src="./img/Shal/Shal-StaMap.png" alt="沙崙線 中洲站 經由 長榮大學站 沙崙站"></div>
                 </div>
             </div>
         </section>
@@ -92,26 +92,24 @@
             <div class="container-fluid img-main-bgi">
                 <div class="container section2">
                     <div class="row">
-                        <div class="col"><img src="./img/Jiji/main-Jiji-title.png" alt="集集支旅"></div>
+                        <div class="col"><img src="./img/Shal/main-Shal-title.png" alt="沙崙支旅"></div>
                     </div>
                     <div class="row text-justify text-main-cotent">
                         <div class="col">
                             <p class="my-0">
-                                <span>|</span>集集支線為臺鐵最長的鐵路支線，最初興建原因為水力發電興建水庫的運輸鐵路，後來因豐富的觀光資源，成為臺灣觀光鐵道的先驅，它也是目前南投縣唯一仍在
-                                營運的鐵路。車埕車站的「埕」字是臺灣閩南語「場」的意思。昔日埔里糖廠於1916年始以臺車運送糖到車埕車站，將生產的糖運出，在車埕車站前有許多臺車停放，站名也因此而來。
+                                <span>|</span>臺鐵為了方便旅客轉乘高鐵，於民國100年1月2日正式啟用，臺鐵沙崙線列車取代原本搭高鐵接駁巴士，交通時間由原本50分鐘縮短至22分鐘。沙崙線全程皆為高架，還開了首例橫跨國道一號，為臺鐵捷運化轉型實例。特別的是路線還經過長榮大學內，還能搭到別具臺南特色的彩繪圖案列車，讓你的接駁時刻更有樂趣！
                             </p>
                         </div>
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-6">
-                            <div class="text-center img-main-km"><img src="./img/Jiji/main-Jiji-km.png"
-                                    alt="支線總長為29.7公里"></div>
+                            <div class="text-center img-main-km"><img src="./img/Shal/main-Shal-km.png"
+                                    alt="支線總長為5.3公里"></div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="img-main-line"><img src="./img/Jiji/main-Jiji-line.png" alt="起站二水站 迄站車埕站"></div>
-                            <div class="img-main-train"><img src="./img/Jiji/main-Jiji-train.png" alt="台鐵列車"></div>
+                            <img src="./img/Shal/main-Shal-trainLine.png" alt="台鐵列車 起站中洲站 迄站沙崙站">
                         </div>
                     </div>
                 </div>
