--- a/Liuj.html
+++ b/Liuj.html
@@ -81,21 +81,8 @@
           </div>
         </div>
         <div class="row px-3 justify-content-center">
-          <div class="col-3 px-0 d-flex align-items-center">
-            <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 中洲站">
-            <p class="m-0 ml-4">中洲站</p>
-          </div>
-          <div class="col-2 px-0 d-flex align-items-center">
-            <img src="./img/Shal/Shal-staBtnArrow.png" alt="經由">
-          </div>
-          <div class="col-3 px-0 d-flex align-items-center">
-            <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 長榮大學站">
-            <p class="m-0 ml-4">長榮大學站</p>
-          </div>
-          <div class="col-2 px-0 d-flex align-items-center">
-            <img src="./img/Shal/Shal-staBtnlast.png" alt="沙崙線 沙崙站">
-            <p class="m-0 ml-4">沙崙站</p>
-          </div>
+          <div class="col d-flex justify-content-center">
+            <img src="./img/Liuj/Liuj-StaMap.png" alt="六家線 竹中站 經由 六家站"></div>
         </div>
       </div>
     </section>
@@ -109,111 +96,109 @@
           <div class="row text-justify text-main-cotent">
             <div class="col">
               <p class="my-0">
-                <span>|</span>臺鐵為了方便旅客轉乘高鐵，於民國100年1月2日正式啟用，臺鐵沙崙線列車取代原本搭高鐵接駁巴士，交通時間由原本50分鐘縮短至22分鐘。沙崙線全程皆為高架，還開了首例橫跨國道一號，為臺鐵捷運化轉型實例。特別的是路線還經過長榮大學內，還能搭到別具臺南特色的彩繪圖案列車，讓你的接駁時刻更有樂趣！
-              </p>
+                <span>|</span>臺灣鐵路管理局新建六家支線，並於 2011 年 11 月 11 日通車營運，在竹中站與「內灣線」銜接，連結臺鐵新竹站和高鐵新竹站，延伸至「縱貫線」,
+                形成的新竹鐵路網，無論是市區內的移動或是火車、高鐵的轉乘服務，還是轉往內灣的觀光路線， 皆提供了更加迅速的便捷服務，有效縮短行車時間，為民眾帶來便利的無縫接駁服務！</p>
             </div>
           </div>
           <div class="row justify-content-center">
             <div class="col-6">
-              <div class="text-center img-main-km"><img src="./img/Liuj/main-Liuj-km.png" alt="支線總長為5.3公里"></div>
+              <div class="text-center img-main-km"><img src="./img/Liuj/main-Liuj-km.png" alt="支線總長為3.1公里"></div>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <div class="img-main-line"><img src="./img/Liuj/main-Liuj-line.png" alt="起站中洲站 迄站沙崙站"></div>
-              <div class="img-main-train"><img src="./img/Liuj/main-Liuj-train.png" alt="台鐵列車"></div>
+              <img src="./img/Liuj/main-Liuj-trainLine.png" alt="台鐵列車 起站竹中站 迄站六家站">
             </div>
           </div>
         </div>
       </div>
     </section>
+    <!-- 版型A-1 -->
     <section>
-      <div class="container">
+      <div class="container section3">
         <div class="row">
-          <div class="col">
-            <img class="top-left" src="https://i.imgur.com/aMg0KYR.png" alt="">
-            <img class="top-right-1" src="https://i.imgur.com/9B7QbyP.png" alt="">
+          <div class="col-3"></div>
+          <div class="col-6 text-left">
+            <img src="./img/Liuj/Liuj-hakkaTitle01.png" alt="新瓦屋客家文化保存區">
           </div>
-          <div class="col">
-            <p class="top-right">最美海景風光，融合鐵道煤礦文化，八斗子車站橫跨基隆市及新北市，其依山傍海、海天一色的絕美風景，深澳線曾被推舉為「臺灣最美海岸支線」。</p>
+          <div class="col-3 text-right">
+            <img src="./img/Liuj/Liuj-hakkaTitle02.png" alt="鄰近車站 六家站">
           </div>
         </div>
-        <img class="center-1" src="https://i.imgur.com/hZYo9iF.jpg" class="img-fluid" alt="Responsive image">
-        <p class="center-2">|這條可說是離海岸線最近的鐵道自行車道，在騎乘的路途中，白浪奔騰、碧波萬頃的景象彷彿觸手可及。沿線經過的建基煤礦舊址曾是全台灣第一大的海底煤礦，也是深澳發展史上不可或缺的一頁。</p>
-        <img class="center-3" src="https://i.imgur.com/hDZpShz.jpg" class="img-fluid" alt="Responsive image">
-    </section>
-
-    <section>
-      <div class="container">
         <div class="row">
           <div class="col">
-            <img class="center-10" src="https://i.imgur.com/TmbaqDV.png" alt="">
+            <img class="rounded-lg" src="./img/Liuj/Liuj-hakka01.jpg" alt="新瓦屋">
           </div>
-          <div class="col-md-auto"></div>
-          <div class="col col-lg-2">
-            <img class="center-11" src="https://i.imgur.com/ma1gfsH.png" alt="">
+        </div>
+        <div class="row text-justify text-Liuj-hakka01">
+          <div class="col">
+            <p class="my-0">
+              <span>|</span>新瓦屋被納入高鐵新竹站特定區的都市計畫範圍內，在地方文史工作者及六家居民的共同呼籲與努力下保存下來，經過行政院客家委員會與地方政府協調之後，劃設為全國第一處「客家文化保存區」，同時進行水田景觀復原計畫，這塊水田區域是高鐵特定區中僅存的三分田地，為竹北六家農村的歷史留下了見證。
+            </p>
           </div>
         </div>
       </div>
-      <img class="center-4" src="https://i.imgur.com/eubokFf.jpg" class="img-fluid" alt="Responsive image">
-      <p class="center-5">
-        |和平島屬於基隆市中正區，位於基隆港北端、港口東側，目前已和台灣本島形成「陸連島」。由於終年受到東北季風吹襲以及海浪拍打侵蝕影響，造成島上的天然景觀奇特，海岸屬於沉降海岸，因此造就了許多奇岸怪石的景觀，因景觀獨特政府規劃開闢為和平島濱海公園。後經封閉三年並重新整修，已於2012年6月更名「和平島公園」重新開放。
-      </p>
-      <img src="https://i.imgur.com/GjBpIw6.jpg" class="img-fluid" alt="Responsive image">
-      <p class="center-6">
-        |位在基隆中正區和平島公園內的一個小地名，源自阿美族語，意思是彎來彎去容易迷失的地方。50年代，族裡的頭目就告戒離開家鄉的族人說，出到外地以後不要迷失，不要忘了自己的故鄉，要時時想念自己是阿美族人，阿拉寶灣是你的故鄉之含意存在。
-      </p>
     </section>
-
+    <!-- 版型D -->
     <section>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <img class="center-8" src="https://i.imgur.com/IZIHmH0.png" alt="">
-            <p class="center-7">阿拉寶灣內最知名的就屬豆腐岩景觀，在日出時黃金般的陽光灑落在，因自然海蝕而形成一格格的塊狀岩石，美得不可方物，因而被「美國中文網」獲選為「全球21個最美日出觀測點」之一。
-            </p>
+      <div class="container section4">
+        <div class="row justify-content-between text-justify">
+          <div class="col-5">
+            <div class="text-center"><img src="./img/Liuj/Liuj-hakkaTitle03.png" alt="歷史故事"></div>
+            <div>
+              <p class="my-0">
+                <span>|</span>清嘉慶10年(西元1805年)。新瓦屋林家，來台祖為孫檀公，隨同林孫漳、林先坤父子（六張犁林家）一同渡海來台，於芒頭埔一帶開基，因較六張犁大夫第為新，故稱為新瓦屋。新瓦屋是一座封閉型的村莊，四周建有圍牆與外區隔，圍牆門樓則題有「西河世第」，圍牆內有數座古宅，以「忠孝堂」公廳圍聚落中心。氣勢更能襯托出典藏寶物宮殿的華麗。
+              </p>
+            </div>
           </div>
-          <div class="col">
-            <img class="center-9" src="https://i.imgur.com/wqCYwu4.jpg" alt="">
-          </div>
+          <div class="col-6"><img class="rounded-lg" src="./img/Liuj/Liuj-hakka02.jpg" alt="新瓦屋"></div>
         </div>
+      </div>
+    </section>
+    <!-- 版型G -->
+    <section>
+      <div class="container section5">
+        <div class="row">
+          <div class="col"><img src="./img/Liuj/Liuj-hakka03.jpg" alt="象明三房"></div>
+        </div>
+      </div>
     </section>
     <!-- 下一支線swiper -->
     <section>
-      <div class="container section6">
+      <div class="container nextTrip">
         <div class="row">
           <div class="col-1">
             <!-- Add Arrows -->
-            <div class="swiper-button-prev"><img src="./img/main/main-btnL.png" alt="往前一支線"></div>
+            <div class="swiper-button-prev"><img src="./img/main/nextTrip/main-btnL.png" alt="往前一支線"></div>
           </div>
           <div class="col-10 m-auto">
             <!-- Swiper: Loop Mode with Multiple Slides Per Group -->
             <div class="swiper-container">
               <div class="swiper-wrapper">
                 <div class="swiper-slide img-main-btn">
-                  <img src="./img/main/main-btn-Neiw.png" alt="內灣線">
+                  <img src="./img/main/nextTrip/main-btn-Neiw.png" alt="內灣線">
                 </div>
                 <div class="swiper-slide img-main-btn">
-                  <img src="./img/main/main-btn-Liuj.png" alt="六家線">
+                  <img src="./img/main/nextTrip/main-btn-Liuj.png" alt="六家線">
                 </div>
                 <div class="swiper-slide img-main-btn">
-                  <img src="./img/main/main-btn-Jiji.png" alt="集集線">
+                  <img src="./img/main/nextTrip/main-btn-Jiji.png" alt="集集線">
                 </div>
                 <div class="swiper-slide img-main-btn">
-                  <img src="./img/main/main-btn-Shal.png" alt="沙崙線">
+                  <img src="./img/main/nextTrip/main-btn-Shal.png" alt="沙崙線">
                 </div>
                 <div class="swiper-slide img-main-btn">
-                  <img src="./img/main/main-btn-Shen.png" alt="深澳線">
+                  <img src="./img/main/nextTrip/main-btn-Shen.png" alt="深澳線">
                 </div>
                 <div class="swiper-slide img-main-btn">
-                  <img src="./img/main/main-btn-Ping.png" alt="平溪線">
+                  <img src="./img/main/nextTrip/main-btn-Ping.png" alt="平溪線">
                 </div>
               </div>
             </div>
           </div>
           <div class="col-1">
             <!-- Add Arrows -->
-            <div class="swiper-button-next"><img src="./img/main/main-btnR.png" alt="往後一支線"></div>
+            <div class="swiper-button-next"><img src="./img/main/nextTrip/main-btnR.png" alt="往後一支線"></div>
           </div>
         </div>
       </div>
