--- a/Shal.html
+++ b/Shal.html
@@ -82,8 +82,8 @@
                     </div>
                 </div>
                 <div class="row px-3 justify-content-center">
-                    <div class="col d-flex justify-content-center"><img src="./img/Shal/Shal-StaMap.png"
-                            alt="沙崙線 中洲站 經由 長榮大學站 沙崙站"></div>
+                    <div class="col d-flex justify-content-center">
+                        <img src="./img/Shal/Shal-StaMap.png" alt="沙崙線 中洲站 經由 長榮大學站 沙崙站"></div>
                 </div>
             </div>
         </section>
@@ -110,8 +110,6 @@
                     <div class="row">
                         <div class="col">
                             <img src="./img/Shal/main-Shal-trainLine.png" alt="台鐵列車 起站中洲站 迄站沙崙站">
-                            <!-- <div class="img-main-line"><img src="./img/Shal/main-Shal-line.png" alt="起站中洲站 迄站沙崙站"></div>
-                            <div class="img-main-train"><img src="./img/Shal/main-Shal-train.png" alt="台鐵列車"></div> -->
                         </div>
                     </div>
                 </div>
@@ -175,46 +173,48 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img class="rounded-lg" src="./img/Shal/Shal-cjcu01.jpg" alt="長榮大學站">
+                    <div class="col">
+                        <img class="rounded-lg" src="./img/Shal/Shal-cjcu01.jpg" alt="長榮大學站">
+                    </div>
                 </div>
             </div>
         </section>
         <!-- 下一支線swiper -->
         <section>
-            <div class="container section6">
+            <div class="container nextTrip">
                 <div class="row">
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-prev"><img src="./img/main/main-btnL.png" alt="往前一支線"></div>
+                        <div class="swiper-button-prev"><img src="./img/main/nextTrip/main-btnL.png" alt="往前一支線"></div>
                     </div>
                     <div class="col-10 m-auto">
                         <!-- Swiper: Loop Mode with Multiple Slides Per Group -->
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Neiw.png" alt="內灣線">
+                                    <img src="./img/main/nextTrip/main-btn-Neiw.png" alt="內灣線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Liuj.png" alt="六家線">
+                                    <img src="./img/main/nextTrip/main-btn-Liuj.png" alt="六家線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Jiji.png" alt="集集線">
+                                    <img src="./img/main/nextTrip/main-btn-Jiji.png" alt="集集線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Shal.png" alt="沙崙線">
+                                    <img src="./img/main/nextTrip/main-btn-Shal.png" alt="沙崙線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Shen.png" alt="深澳線">
+                                    <img src="./img/main/nextTrip/main-btn-Shen.png" alt="深澳線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Ping.png" alt="平溪線">
+                                    <img src="./img/main/nextTrip/main-btn-Ping.png" alt="平溪線">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-next"><img src="./img/main/main-btnR.png" alt="往後一支線"></div>
+                        <div class="swiper-button-next"><img src="./img/main/nextTrip/main-btnR.png" alt="往後一支線"></div>
                     </div>
                 </div>
             </div>
